// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Content Storage 1234: removes private solutions 1`] = `
{
  "interactives": {
    "1": {
      "metadata.json": "{"extra":"Something extra","books":["should-not-appear-in-snapshot"]}",
    },
    "1234": {
      "content.json": "{
  "fake": "to make sure it is saved too"
}
",
      "h5p.json": "{
  "title": "this should be stored in folder 1234",
  "mainLibrary": "H5P.Blanks",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}
",
      "metadata.json": "{
  "is-solution-public": "false"
}
",
    },
  },
  "private": {
    "interactives": {
      "1234": {
        "content.json": "{
  "questions": [
    "<p>This should not appear in the content.json</p>"
  ]
}
",
      },
    },
  },
}
`;

exports[`File Content Storage 12345: leaves public solutions 1`] = `
{
  "interactives": {
    "1": {
      "metadata.json": "{"extra":"Something extra","books":["should-not-appear-in-snapshot"]}",
    },
    "12345": {
      "content.json": "{
  "fake": "to make sure it is saved too",
  "questions": [
    "<p>This should  appear in the content.json</p>"
  ]
}
",
      "h5p.json": "{
  "title": "this should be stored in folder 12345",
  "mainLibrary": "H5P.Blanks",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}
",
      "metadata.json": "{
  "is-solution-public": "true"
}
",
    },
  },
}
`;

exports[`File Content Storage saves content as expected 1`] = `
{
  "interactives": {
    "1": {
      "metadata.json": "{
  "extra": "Something extra",
  "books": [
    "meta-3"
  ]
}
",
    },
    "1234": {
      "content.json": "{}
",
      "h5p.json": "{
  "title": "this should be stored in folder 1234",
  "mainLibrary": "something",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}
",
    },
    "2": {
      "content.json": "{
  "this": "could",
  "literally": "be",
  "anything": "because",
  "it": "is",
  "very": "loosely",
  "defined": true
}
",
      "h5p.json": "{
  "title": "this should be stored in folder 2",
  "mainLibrary": "something",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}
",
      "metadata.json": "{
  "books": [
    "meta-1"
  ]
}
",
    },
    "3": {},
    "4": {
      "content.json": "{}
",
      "h5p.json": "{
  "title": "this should be stored in folder 3",
  "mainLibrary": "something",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}
",
      "metadata.json": "{
  "books": [
    "meta-2"
  ]
}
",
    },
    "5": {},
  },
}
`;
